Update CheckRunner.java